--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,13 +1,16 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: backstage-k8s
+  name: nginx
   description: An example of a Backstage application.
   # Example for optional annotations
   # annotations:
   #   github.com/project-slug: backstage/backstage
   #   backstage.io/techdocs-ref: dir:.
+# catalog-info.yaml (backstage)
+  annotations:
+    backstage.io/kubernetes-label-selector: 'nginx'
 spec:
-  type: website
-  owner: john@example.com
+  type: service
+  owner: guest
   lifecycle: experimental
