--- a/deploy/backstage-resources/bs-service-account.yaml
+++ b/deploy/backstage-resources/bs-service-account.yaml
@@ -13,7 +13,8 @@ kind: ServiceAccount
 metadata:
   name: backstage-service-account
   namespace: backstage
-
+  annotations:
+    eks.amazonaws.com/role-arn: "arn:aws:iam::XXXXXX:role/XXXX"
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
