--- a/app-config.yaml
+++ b/app-config.yaml
@@ -53,7 +53,7 @@ integrations:
     #   apiBaseUrl: https://ghe.example.net/api/v3
     #   token: ${GHE_TOKEN}
 
-proxy:
+#proxy:
   ### Example for how to add a proxy endpoint for the frontend.
   ### A typical reason to do this is to handle HTTPS and CORS for internal services.
   # endpoints:
@@ -124,14 +124,33 @@ catalog:
       target: ${ANNOTATION_AWS_ACCOUNT_ID}/${AWS_REGION}
     - type: aws-eks
       target: ${ANNOTATION_AWS_ACCOUNT_ID}/eu-west-1
+      annotations:
+        aws.com/iam-role-arn: ${DOWNSTREAM_ROLE_AWS_ARN}
+        ANNOTATION_AWS_ARN: ${DOWNSTREAM_ROLE_AWS_ARN}
 
 aws:
   mainAccount:
-    roleName: ${ANNOTATION_AWS_ARN}
-    region: ${AWS_REGION}
-    
+    roleName: ${MAIN_ROLE_AWS_ARN}
+#    region: ${AWS_REGION}
+    accounts:
+      # Credentials can come from a role in the account
+      - roleName: ${DOWNSTREAM_ROLE_AWS_ARN}
+#        region: eu-west-1
+
+
 kubernetes:
   serviceLocatorMethod:
     type: 'multiTenant'
   clusterLocatorMethods:
     - type: 'catalog'
+
+
+proxy:
+  '/argocd/api':
+    target: https://${ARGOCD_ADDRESS}/api/v1/
+    changeOrigin: true
+    # only if your argocd api has self-signed cert
+    secure: false
+    headers:
+      Cookie:
+        $env: ARGOCD_AUTH_TOKEN
