--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,7 +13,8 @@
     "lint": "backstage-cli package lint",
     "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
-    "build-image": "docker build ../.. -f Dockerfile --tag backstage"
+    "build-image": "docker build ../.. -f Dockerfile --tag backstage",
+    "postinstall": "npx patch-package"
   },
   "dependencies": {
     "@backstage/backend-common": "^0.19.9",
