--- a/packages/backend/Dockerfile-dev
+++ b/packages/backend/Dockerfile-dev
@@ -1,49 +1,34 @@
 FROM node:18-bookworm-slim
 
+USER root
+
 # Install system dependencies
 
 RUN apt-get update && \
-    apt-get install -y vim curl unzip  bash zsh
-
+    apt-get install -y vim curl unzip  bash zsh git python3 g++ build-essential libsqlite3-dev
 
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
     unzip awscliv2.zip && \
-	./aws/install
-RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-RUN chmod +x ./kubectl
-RUN mv ./kubectl /usr/local/bin
+	./aws/install && \
+    curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
+    chmod +x ./kubectl && \
+    mv ./kubectl /usr/local/bin
 
 
 # Allow 'node' user to run sudo commands without a password
 
 RUN echo 'node ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
 
-
+# Copy package.json and yarn.lock files to the container
+#COPY package.json ./
+COPY ../../. /app
 
 # Set the working directory inside the container
-
 WORKDIR /app
-
-
-
-# Copy package.json and yarn.lock files to the container
-
-COPY package.json ./
-
-
-
-# # Install dependencies
-
+RUN git checkout no-gh
+# Install dependencies
 RUN yarn install --frozen-lockfile
-
-
-
-# Copy the rest of the application files to the container
-
-COPY . /app
-
-
 
 # Expose the backend port
 
@@ -51,9 +36,6 @@ EXPOSE 7007
 
 EXPOSE 3000
 
-
-
-USER root
 
 # Start the development server when the container is run
 
